<resources>
    <string name="app_name">Sobra Zero</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ver_resto">Visualiza Restos</string>
    <string name="vote_refeicao">Vote na refeição</string>
    <string name="fale_conosco">Fale Conosco</string>
    <string name="title_activity_nav_test_bar">NavTestBar</string>
    <string name="app_name_admin">Sobra Zero - Admin</string>
    <string name="statitics">Estatisticas</string>
    <string name="edit_vot">Editar Votação</string>
    <string name="edit_sauda">Editar Saudação</string>
    <string name="saiba_mais">O Sobra Zero é um projeto idealizado para conscientizar usuarios dos restaurantes universitarios sobre o desperdicio de comida,
    atravez da exposição, em tempo real da quantidade de alimentos disperdiçados diariamente, atravez dessa exposição esperamos reduzir o
    indice de sobras e trazer um retorno positivo para o meio ambiente em relação a redução de residuos e aos usuarios dos restaurantes
    atraves de recompensas como refeições e sobremesas mais apetitosas que só podem ser servidas porque a verba que antes era gasta
    com alimentos que eram disperdiçados agora pode ser redirecionada para atender melhor os frequentadores dos reustaurantes universitarios.</string>
</resources>
