<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeAdmin">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="HomeAdmin">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:background="@color/colorBackgroundMenu">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorBackgroundMenu"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="HomeAdmin"
            android:background="@drawable/pazeamor">

            <include
                layout="@layout/footer"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingTop="150dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <Button
                    android:text="@string/statitics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/resto_btn"
                    android:textColor="#FFF"
                    android:background="#66333333" />

                <Button
                    android:text="@string/edit_vot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/vot_ref_btn"
                    android:textColor="#FFF"
                    android:background="#66333333"
                    android:layout_marginTop="10dp" />

                <Button
                    android:text="@string/edit_sauda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fale_con_btn"
                    android:textColor="#FFF"
                    android:background="#66333333"
                    android:layout_marginTop="10dp"/>


            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_home"
        app:menu="@menu/activity_home_drawer_admin" />

</android.support.v4.widget.DrawerLayout>
